KUBERNETES/07_00_ingress/apache-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-tls
spec:
  tls:
  - hosts:
    - apache-tls.10.0.1.1.sslip.io
    secretName: my-tls-certs
  rules:
  - host: apache-tls.10.0.1.1.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache
            port:
              number: 80

# curl -H "Host: apache-tls.10.0.1.1.sslip.io" http://localhost
